# course-C

./: .gitignore  CMakeLists.txt
advanced in C language/files/: teste.c
advanced in C language/files/fgets and fputc/: main.c  teste.txt
advanced in C language/files/write and read/: main.c  teste.txt
advanced in C language/pointer to function/: main.c
advanced in C language/preprocessor and declarations/define/: main.c
advanced in C language/preprocessor and declarations/operation #/: main.c
advanced in C language/scalar parameters/: example.c
advanced in C language/scalar parameters/lab/: person.c
advanced in C language/struct/first definition/: student.c
advanced in C language/struct/pointer to struct/: main.c
advanced in C language/struct/stack music/: main.c
advanced in C language/struct/struct as a list/: main.c
first_program/: hello_world.c
introduction C language/LABS/whats your name/: main.c
introduction C language/arrays, pointers and strings/strings/: init_string.c  manipulation_strings.c
introduction C language/conditions, loops and more data type/character_string/: character.cpp  main.c
introduction C language/conditions, loops and more data type/conversion/: conversion_exercise.c
introduction C language/conditions, loops and more data type/int/: data_type.c
introduction C language/data types/characters/: main.c
introduction C language/data types/floating point/: main.c
introduction C language/data types/operations/: operations.c
introduction C language/funtions/: calculator.c
(+26 files in other folders)
