cmake_minimum_required(VERSION 3.29)
project(course_C C)

set(CMAKE_C_STANDARD 11)

add_executable(first_code "introduction C language/first_program/hello_world.c")
add_executable(lab_whats_your_name "introduction C language/LABS/whats your name/main.c")
add_executable(floating_point "introduction C language/data types/floating point/main.c")
