cmake_minimum_required(VERSION 3.29)
project(course_C C)

set(CMAKE_C_STANDARD 11)

add_executable(first_code "introduction C language/first_program/hello_world.c")
add_executable(lab_whats_your_name "introduction C language/LABS/whats your name/main.c")
add_executable(floating_point "introduction C language/data types/floating point/main.c")
add_executable(operation "introduction C language/data types/operations/operations.c")
add_executable(character "introduction C language/data types/characters/main.c")
add_executable(if_else "introduction C language/flow control/if_else/main.c")
add_executable(switch "introduction C language/flow control/switch_case/main.c")
